--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
     "name": "exodus-landing-page",
-    "version": "1.0.0",
+    "version": "1.0.4",
     "description": "",
     "private": true,
     "scripts": {
         "dev": "gulp dev",
         "build": "gulp build",
-        "clean": "gulp clean",
-        "hugo": "hugo",
-        "docs:server": "cd docs && hugo server -D",
-        "docs:build": "cd docs && hugo"
+        "clean": "gulp clean"
     },
     "author": "Vantage Design",
     "devDependencies": {
@@ -23,10 +20,6 @@
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^4.0.2",
-        "gulp-uglify": "^3.0.2",
-        "hugo-bin": "^0.51.2"
-    },
-    "hugo-bin": {
-        "buildTags": "extended"
+        "gulp-uglify": "^3.0.2"
     }
 }
